[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Screens/MainScreen/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/BG.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/ZombieUniverse.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/StartRed.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/StartGreen.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/ContinueRed.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/Continuegreen.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/QuitRed.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/Quitgreen.png" type="Texture" id=9]
[ext_resource path="res://Resources/AudioFiles/MainScreen/mainscreen.ogg" type="AudioStream" id=10]

[node name="Start_Screen" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( -135.32, -10.385 )
scale = Vector2( 0.530243, 0.541074 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 76.7469
margin_top = 4.68439
margin_right = -84.2531
margin_bottom = -84.3156
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1021.0
margin_bottom = 491.0
size_flags_horizontal = 5
custom_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1001.0
margin_bottom = 135.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 374.0
margin_top = 167.0
margin_right = 626.0
margin_bottom = 365.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start_Button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 20.0
margin_right = 232.0
margin_bottom = 65.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Continue_Button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 252.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Quit_Button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 20.0
margin_top = 134.0
margin_right = 232.0
margin_bottom = 198.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="MainScreenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 4.49
autoplay = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit_Button" to="." method="_on_Quit_Button_pressed"]
